<resources>
    <string name="app_name">SSA</string>

    <string name="ok">OK</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login_me">Login me</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="set_mpin">Set MPIN</string>
    <string name="enter_mpin">Enter MPIN</string>
    <string name="enter_mpin_validate">Enter 4 digit mpin to validate</string>
    <string name="four_digit_pin">4 digit PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="confirm">Confirm</string>
    <string name="add_school">Add School</string>
    <string name="confirm_school">Confirm School</string>
    <string name="enter_uid_number">Enter UID Number</string>
    <string name="uid_number">UID Number</string>
    <string name="submit">Submit</string>
    <string name="add_kid">Add Kid</string>
    <string name="school">School</string>
    <string name="school_class">Class</string>
    <string name="section">Section</string>
    <string name="relationship">Relationship</string>
    <string name="choose_image">Choose Image</string>
    <string name="browse">Browse</string>
    <string name="email_already_exists">Email Already Exists</string>
    <string name="name_of_school">Name of the school:</string>
    <string name="address_of_school">Address of the school:</string>
    <string name="list_of_schools">List of Schools</string>
    <string name="list_of_kids">List of Kids</string>
    <string name="city">City : </string>
    <string name="state">State : </string>
    <string name="pincode">Pincode : </string>
    <string name="website">Website : </string>
    <string name="hint_enter_a_message">Enter a message</string>
    <string name="i_accept_terms">I accept Terms and Conditions and Privacy Policy.</string>
    <string name="wrong_pin">Entered wrong pin.</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="kid_added_scuessfully">Kid added successfully</string>
    <string name="school_added_scuessfully">School added successfully</string>
    <string name="no_activities">No Activities found.</string>

    <string name="please_enter_user_name">Please enter Username</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="please_enter_first_name">Please enter First Name</string>
    <string name="please_enter_last_name">Please enter Last Name</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_valid_email">Please enter valid Email</string>
    <string name="please_enter_phone_number">Please enter Phone Number</string>
    <string name="please_enter_valid_phone_number">Please enter valid Phone Number</string>
    <string name="please_enter_confrim_password">Please enter Confirm Password</string>
    <string name="please_accept_terms">Please accept Terms and Conditions</string>
    <string name="please_enter_uid">Please enter UID number</string>
    <string name="please_enter_pin">Please enter PIN</string>
    <string name="please_enter_confirm_pin">Please enter Confirm PIN</string>
    <string name="please_enter_four_pin">Please enter 4 digit PIN</string>

    <string name="passwords_doesnot_match">Password and Confrim Password must be same</string>
    <string name="pins_doesnot_match">Pin and Confirm Pin must be same</string>
    <string name="reset_pwd_mail_sent">Reset password link sent to your email. sPlease verify.</string>
</resources>
