<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <ImageView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/ic_app_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/set_mpin"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/enter_mpin_validate"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:padding="@dimen/dp_10"
            android:src="@drawable/ic_setpin" />

        <EditText
            android:id="@+id/et_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:hint="@string/four_digit_pin"
            android:inputType="number"
            android:maxLength="4"
            android:padding="@dimen/dp_10"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:padding="@dimen/dp_10"
            android:src="@drawable/ic_setpin_confirm" />

        <EditText
            android:id="@+id/et_confirm_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:hint="@string/confirm_pin"
            android:inputType="number"
            android:maxLength="4"
            android:padding="@dimen/dp_10"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/btn_bg"
        android:minHeight="@dimen/dp_30"
        android:padding="@dimen/dp_10"
        android:text="@string/confirm"
        android:textColor="@color/white" />
</LinearLayout>