<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_app_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_vertical"
                android:background="@color/colorPrimary"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_person" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dp_10"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_2"
            android:background="@drawable/bg_bottom_curved"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_vertical"
                android:background="@color/colorPrimary"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:buttonTint="@color/white"
            android:drawablePadding="@dimen/dp_10"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/btn_bg"
            android:minHeight="@dimen/dp_40"
            android:text="@string/login_me"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:minHeight="@dimen/dp_40"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>
